syntax = "proto3";

option java_multiple_files = true;

package com.tivic;

message UserReq{
  string name = 1;
  string email = 2;
}

message UserRes{
  string name =1;
  string email = 2;
}

message UserResList{
  repeated UserRes users =1;
}
message EmptyReq{}

service UserService{

//unary - synchronous
  rpc create(UserReq) returns (UserRes) {}
  rpc getAll(EmptyReq) returns (UserResList) {}

//server streaming - asynchronous
//  rpc getAllServerStream(EmptyReq) returns (stream UserRes){}
//client streaming - asynchronous
}